--- a/backend/attendance/templates/attendance_list.html
+++ b/backend/attendance/templates/attendance_list.html
@@ -18,3 +18,6 @@
             <span class="att-name">{{ att.student.full_name }}</span> –
             <span class="att-status">{{ att.get_status_display }}</span>
             <span class="row-actions">
+                <a href="{% url 'attendance:attendance_edit' att.pk %}">✎</a>
+                <a href="{% url 'attendance:attendance_delete' att.pk %}">🗑</a>
+              </span>
