Setting Attendance templates

--- a/backend/attendance/templates/attendance_list.html
+++ b/backend/attendance/templates/attendance_list.html
@@ -31,3 +31,6 @@
             <a href="{% url 'attendance:attendance_mark' %}">➕ Mark New Attendance</a>
           </div>
         </section>
+        {{ form.media }}
+    {% endblock %}
+        
