Setting Attendance templates

--- a/backend/attendance/templates/attendance_mark.html
+++ b/backend/attendance/templates/attendance_mark.html
@@ -17,3 +17,9 @@
           {{ form.student }}
           {{ form.student.errors }}
         </div>
+        <div>
+            {{ form.date.label_tag }}<br>
+            {{ form.date }}
+            {{ form.date.errors }}
+          </div>
+  
