--- a/frontend/templates/Gestionduneecole.html
+++ b/frontend/templates/Gestionduneecole.html
@@ -27,7 +27,10 @@
       <li><a href="{% url 'academics:subject_list' %}">Matières / Cours</a></li>
       <li><a href="{% url 'academics:year_list'    %}">Années scolaires</a></li>
       <li><a href="{% url 'academics:term_list'    %}">Semestres / Trimestres</a></li>
-      <li><a href="{% url 'attendence:overview'    %}">Attendance</a></li>
+      <li>
+        <a href="{% url 'attendance:terms' %}">Attendance</a>
+      </li>
+      
 
       <!-- remaining tab links -->
       <li><a href="#" class="tab-link" onclick="showSection('eleve')">Espace Élève</a></li>
