Setting Attendance templates css updates

--- a/frontend/templates/Gestionduneecole.html
+++ b/frontend/templates/Gestionduneecole.html
@@ -27,9 +27,8 @@
       <li><a href="{% url 'academics:subject_list' %}">Matières / Cours</a></li>
       <li><a href="{% url 'academics:year_list'    %}">Années scolaires</a></li>
       <li><a href="{% url 'academics:term_list'    %}">Semestres / Trimestres</a></li>
-      <li>
-        <a href="{% url 'attendance:terms' %}">Attendance</a>
-      </li>
+      <li><a href="{% url 'attendance:attendance_overview' %}">Attendance</a></li>
+
       
 
       <!-- remaining tab links -->
