update attendance delete

--- a/backend/attendance/templates/attendance_delete_blocked.html
+++ b/backend/attendance/templates/attendance_delete_blocked.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Cannot Delete Attendance{% endendblock %}
+{% block title %}Cannot Delete Attendance{% endblock %}
+
 {% block header_title %}Cannot Delete Attendance{% endblock %}
 
 {% block content %}
