--- a/backend/teachers/templates/teacher_delete_confirm.html
+++ b/backend/teachers/templates/teacher_delete_confirm.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="form-card">
 
-    <h1 style="color:#c0392b;">Delete Teacher</h1>
+    <h1 style="color:#c0392b;">Delete Teacher 🗑</h1>
 
     <p style="text-align:center; margin-bottom:1.25rem;">
       Are you <strong>absolutely sure</strong> you want to delete
