--- a/backend/teachers/templates/teacher_detail.html
+++ b/backend/teachers/templates/teacher_detail.html
@@ -28,7 +28,7 @@
 
       <div class="mt-4">
         <a href="{% url 'teachers:teacher_edit' teacher.slug %}" class="text-green-600 mr-4">Edit</a>
-        <a href="{% url 'teachers:teacher_delete' teacher.slug %}" class="text-red-600">Delete</a>
+        <a href="{% url 'teachers:teacher_delete' teacher.slug %}" class="text-red-600">Delete 🗑</a>
         <a href="{% url 'teachers:teacher_list' %}" class="text-blue-600 ml-4">Back to List</a>
       </div>
     </div>
